openmediavault (0.5.0.11) stable; urgency=low

  * Set the setgid bit on shared folders.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Jun 2013 17:40:08 +0200

openmediavault (0.5.0.10) stable; urgency=low

  * Use SVG icons if possible.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 16 Jun 2013 19:35:17 +0200

openmediavault (0.5.0.9) stable; urgency=low

  * Various improvements and bugfixes.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Jun 2013 19:21:28 +0200

openmediavault (0.5.0.8) stable; urgency=low

  * Various improvements and bugfixes.
  * Fix issue in method OMVSoftwareRaidDevice::getState().

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jun 2013 20:49:40 +0200

openmediavault (0.5.0.7) stable; urgency=low

  * Fix issue in RPC Plugin::getList.
  * Change various icons.
  * Various improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jun 2013 18:25:01 +0200

openmediavault (0.5.0.6) stable; urgency=low

  * Various improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 10 Jun 2013 21:38:24 +0200

openmediavault (0.5.0.5) stable; urgency=low

  * Fix bug in RPC Config::applyChanges().
  * Fix various issues.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 31 May 2013 22:09:46 +0200

openmediavault (0.5.0.4) stable; urgency=low

  * Fix various issues.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 31 May 2013 14:01:19 +0200

openmediavault (0.5.0.3) stable; urgency=low

  * Fix various issues in the WebGUI.
  * Mantis 0000775: NFS: Deleting a share of a folder that is shared multiple
    times, results in an error.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 28 May 2013 19:53:31 +0200

openmediavault (0.5.0.2) stable; urgency=low

  * Fix various issues in the WebGUI.
  * Fix bug in SMB module when creating a new user.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 May 2013 10:10:28 +0200
