@@ -1,6 +1,7 @@
 openmediavault (0.5.0.11) stable; urgency=low
 
   * Set the setgid bit on shared folders.
+  * Improve error handling in OMV.window.Execute dialog.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 17 Jun 2013 17:40:08 +0200
 
